--- a/chat-batch/build.gradle
+++ b/chat-batch/build.gradle
@@ -8,3 +8,7 @@ version '0.0.1-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
