--- a/chat-web/build.gradle
+++ b/chat-web/build.gradle
@@ -10,5 +10,5 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
