--- a/build.gradle
+++ b/build.gradle
@@ -28,18 +28,19 @@ subprojects {
 
     dependencies {
         compileOnly('org.projectlombok:lombok')
-        compile('org.springframework.boot:spring-boot-starter-jdbc')
-        testCompile('org.springframework.boot:spring-boot-starter-test')
         annotationProcessor 'org.projectlombok:lombok'
+
+        implementation 'org.apache.commons:commons-lang3:3.11'
+        testCompile('org.springframework.boot:spring-boot-starter-test')
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
         runtime('mysql:mysql-connector-java')
-        runtime('com.h2database:h2')
     }
 }
 
 project(':chat-common') {
     dependencies {
-        compile('org.springframework.boot:spring-boot-starter-data-jpa')
+        compile('org.springframework.boot:spring-boot-starter-jdbc')
     }
 }
 
@@ -48,6 +49,8 @@ project(':chat-web') {
         compile project(':chat-common')
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-mustache'
+        implementation 'org.apache.httpcomponents:httpcore:4.4.13'
+        implementation 'org.apache.httpcomponents:httpclient:4.5.12'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -58,6 +61,7 @@ project(':chat-web') {
 project(':chat-api') {
     dependencies {
         compile project(':chat-common')
+        compile('org.springframework.boot:spring-boot-starter-data-jpa')
     }
 }
 
