--- a/chat-web/src/main/resources/application.properties
+++ b/chat-web/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=10080
-
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=javaworld00!!
+
+spring.devtools.livereload.enabled=true
+spring.mustache.cache=false
